--- a/08-HTML/demos/clase1/miPrimerHTML.html
+++ b/08-HTML/demos/clase1/miPrimerHTML.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Leo</title>
+  <title>Nicolás</title>
+  <meta charset="UTF-8">
 </head>
 <body>
-    <p>Soy Henry</p>
-    <p>Soy Henry</p>
-    <a href="http://www.google.com">Link a Google</a>
-    <img src="http://placekitten.com/500/500" />
-    <img src="./gatito.jpg" />
+  <div>
+    <h1> Nicolás</h1>
+    <h3>Henry</h3>
+    <h4>"tarea de HTML / CSS".</h4>
+  </div>
+
+  <div>
+    <samp>comida favorita es hamburgesa</samp>
+    <a href="https://www.google.com/" > link </a>
+  </div>
+  <div>
+    <ul>
+      <li><img src="https://t2.rg.ltmcdn.com/es/images/0/8/9/img_pan_para_hamburguesa_28980_orig.jpg"></li>
+      <li><img src="https://t2.rg.ltmcdn.com/es/images/0/8/9/img_pan_para_hamburguesa_28980_orig.jpg"></li>
+    </ul>
+  </div>
   </body>
 </html>
